tests/diagnostics/expressions/unary_not/operand_not_boolean/expect.txt
# exit: 1
input/main.lang0:2:16: error: not operator requires boolean operand
      return not 1
                 ^
